@@ -1,5 +1,7 @@
 [%# Screen for show a list of topics. #%]
 
+[% PROCESS header.html.tmpl %]
+
 [%# Show the top-level links for "Create new topic" and "Search" #%]
 <p>
     <a href="[% create_topic_url %]">Create new topic</a> | 
@@ -37,6 +39,9 @@
 
     [% END %]
 </table>
+
+[% PROCESS trailer.html.tmpl %]
+
 </body>
 </html>
 
