@@ -1,5 +1,7 @@
 [%# Screen for search topics. #%]
 
+[% PROCESS header.html.tmpl %]
+
 <H1>Topic search</H1>
 
 <P>
@@ -70,5 +72,8 @@
 <INPUT TYPE="hidden" NAME=".cgifields" VALUE="text_group">
 
 </FORM>
+
+[% PROCESS trailer.html.tmpl %]
+
 </BODY>
 </HTML>
